// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Divider> renders Divider 1`] = `
<span
  className="Van-Divider"
>
  <span
    className="Van-Divider-content"
  >
    
  </span>
</span>
`;

exports[`<Divider> renders Divider with content 1`] = `
<span
  className="Van-Divider"
>
  <span
    className="Van-Divider-content"
  >
    Hi
  </span>
</span>
`;

exports[`<Divider> renders vertical Divider 1`] = `
<span
  className="Van-Divider Van-Divider--vertical"
>
  <span
    className="Van-Divider-content"
  >
    
  </span>
</span>
`;

exports[`<Divider> renders with specific attributes 1`] = `
<span
  className="Van-Divider"
  data-id="0"
>
  <span
    className="Van-Divider-content"
  >
    
  </span>
</span>
`;

exports[`<Divider> renders with specific className 1`] = `
<span
  className="Van-Divider my-class"
>
  <span
    className="Van-Divider-content"
  >
    
  </span>
</span>
`;
